# keel

./: .env.example  KEEL_COURSE.md  LICENSE  Makefile  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
demo/: __init__.py  breaking_change.py
docs/: BUILD_LOG.md  COURSE.md  PRODUCTIONIZATION.md
docs/adr/: 0001-freshness-clock.md  0002-lineage-source-of-truth.md  0003-compatibility-rules.md
evals/: __init__.py
evals/rca/: __init__.py  cases.py  run.py  score.py
migrations/: env.py
migrations/versions/: 075df8a64554_.py  91ca261b21f5_add_run_watermark.py  9ecec6095540_spec_versions_add_breaking_override.py  9f4c6fa90381_spec_versions.py  b3a9f0d8c2e1_quality_results.py  c84e2f941a20_datasets.py  d5b07061b01e_spec_versions_add_uniquekey.py
src/keel/: config.py
src/keel/adapters/agent/: __init__.py  graph.py  http_reader.py
src/keel/adapters/control_plane/: __init__.py  read_only_client.py
src/keel/adapters/db/: dataset_catalog.py  engine.py  models.py  quality_result_repository.py  run_repository.py  spec_version_repository.py  translators.py
src/keel/adapters/executor/: __init__.py  duckdb_step_handler.py  local.py
src/keel/adapters/transform/: dbt_runner.py
src/keel/adapters/warehouse/: duckdb_warehouse.py
src/keel/application/agent/: __init__.py  authorization.py  diagnose.py  dossier.py  guardrails.py  runbook.py
src/keel/application/catalog/: __init__.py  entry.py
src/keel/application/execution/: __init__.py  compiler.py  plan.py  topology.py
src/keel/application/incident/: __init__.py  detect.py  group.py  lifecycle.py  model.py  routing.py
src/keel/application/lineage/: __init__.py  edges.py  graph.py  verify.py
src/keel/domain/: __init__.py  run.py
src/keel/entrypoints/: api.py  cli.py  dependencies.py  mcp_server.py  schemas.py
tests/: conftest.py  test_agent_adapters.py  test_agent_diagnose.py  test_agent_dossier.py  test_agent_guardrails.py  test_agent_runbook.py  test_api.py  test_catalog.py  test_checks.py  test_cli.py  test_column_measurement.py  test_config.py  test_dataset_catalog_repository.py  test_dbt_transform.py  test_demo_breaking_change.py  test_drift.py  test_duckdb_max_timestamp.py  test_duckdb_step_handler.py  test_eval_rca.py  test_execution_plan.py  test_freshness.py  test_freshness_as_of.py  test_freshness_spec.py  test_incident.py  test_incident_grouping.py  test_incident_lifecycle.py  test_lineage_edges.py  test_lineage_graph.py  test_lineage_verify.py  test_local_executor.py  test_local_executor_dbt_transform.py  test_mcp_server.py  test_quality_gate.py  test_quality_gate_executor.py  test_run_pipeline.py  test_run_repository.py  test_run_state_machine.py  test_skeleton.py  test_slo.py  test_spec.py  (+7 more)
tests/application/: test_executor_observability.py
tests/fixtures/: orders.csv  orders_raw.yaml
transform/: .user.yml  dbt_project.yml  profiles.yml
transform/models/marts/: broken_mart_customer_orders.sql  mart_customer_orders.sql
transform/models/staging/: _sources.yml  broken_model.sql  schema.yml  stg_orders.sql  stg_orders_warn_unique.sql
(+33 files in other folders)
