[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keel"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["ruff", "black", "mypy", "pytest", "import-linter"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.importlinter]
root_package = "keel"

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "keel.entrypoints", "keel.adapters", "keel.application", "keel.domain"
]