[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keel"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = ["ruff", "black", "mypy", "pytest", "import-linter"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.importlinter]
root_package = "keel"

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "keel.entrypoints", "keel.adapters", "keel.application", "keel.domain"
]

[tool.setuptools.package-data]
keel = ["py.typed"]