[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keel"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116",
    "httpx",
    "langgraph==1.2.8",
    "mcp",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "duckdb>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black==25.12.0",
    "mypy",
    "pytest",
    "import-linter",
    "types-PyYAML",
    "dbt-duckdb>=1.10,<1.11",
]

[project.scripts]
keel = "keel.entrypoints.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["langgraph.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires Postgres and/or the dbt binary",
]

[tool.importlinter]
root_package = "keel"

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "keel.entrypoints", "keel.adapters", "keel.application", "keel.domain"
]

[tool.setuptools.package-data]
keel = ["py.typed"]
